...
            android:layout_height="wrap_content"
            android:text="@string/passthrough_channel"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/channelGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:checkedButton="@id/btnModeSpp"
            app:selectionRequired="true"
            app:singleSelection="true">
...
